@@ -17,6 +17,8 @@
 
 package org.apache.lucene.internal.hppc;
 
+import static org.apache.lucene.internal.hppc.TestIntObjectHashMap.toList;
+
 import com.carrotsearch.randomizedtesting.RandomizedTest;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -24,6 +26,8 @@ import java.util.HashSet;
 import java.util.Random;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.lucene.tests.util.LuceneTestCase;
+import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
 import org.junit.Test;
 
 /**
@@ -62,13 +66,6 @@ public class TestLongObjectHashMap extends LuceneTestCase {
     assertEquals(elements.length, array.length);
     Arrays.sort(array);
     Arrays.sort(elements);
-    assertArrayEquals(elements, array);
-  }
-
-  /** Check if the array's content is identical to a given sequence of elements. */
-  private static void assertSortedListEquals(Object[] array, Object... elements) {
-    assertEquals(elements.length, array.length);
-    Arrays.sort(array);
     assertArrayEquals(elements, array);
   }
 
@@ -585,13 +582,15 @@ public class TestLongObjectHashMap extends LuceneTestCase {
     map.put(key1, value3);
     map.put(key2, value2);
     map.put(key3, value1);
-    assertSortedListEquals(map.values().toArray(), value1, value2, value3);
+    MatcherAssert.assertThat(
+        toList(map.values()), Matchers.containsInAnyOrder(value1, value2, value3));
 
     map.clear();
     map.put(key1, value1);
     map.put(key2, value2);
     map.put(key3, value2);
-    assertSortedListEquals(map.values().toArray(), value1, value2, value2);
+    MatcherAssert.assertThat(
+        toList(map.values()), Matchers.containsInAnyOrder(value1, value2, value2));
   }
 
   /* */
